--- a/styles/puzzleGameBoardPage.css
+++ b/styles/puzzleGameBoardPage.css
@@ -1,3 +1,5 @@
+
+
 html, body{
 
     background-color: blanchedalmond; 
@@ -22,5 +24,42 @@ html, body{
 
     background-color: plum;
 }
+
+/* .puzzlePiece{
+
+    width: "480px";
+    height: "300px";
+    border: "2px solid lightgray";
+    background-repeat: "no-repeat";
+    background-size: "cover";
+    background-position:"center";
+} */
+
+
+#easyPuzzleGridBoard{
+
+	display: grid;
+	grid-template-columns: repeat(3,1fr);
+	grid-template-rows: repeat(3,1fr);
+}
+
+
+#mediumPuzzleGridBoard{
+
+    display: grid;
+	grid-template-columns: repeat(5,1fr);
+	grid-template-rows: repeat(5,1fr);
+    /* margin: 10px; */
+	/* width: 50px;
+	height: 50px; */
+}
+
+#hardPuzzleGridBoard{
+
+    display: grid;
+	grid-template-columns: repeat(7,1fr);
+	grid-template-rows: repeat(7,1fr);
+} 
+
 
 
