--- a/styles/indexStyle.css
+++ b/styles/indexStyle.css
@@ -24,7 +24,7 @@ h1{
 }
 
 
-#puzzleImage{
+#puzzleIcon{
 
     padding: 0px;
     margin-top: 0px;
@@ -49,13 +49,25 @@ h1{
 }
 
 
-.box-area {
+#area1 {
 	position: absolute;
 	top: 0;
 	left: 0;
-	width: 100%;
-	height: 100%;
+	width: 40%;
+	height: 100vh;
 	overflow: hidden;
+	/* background-color: brown; */
+}
+
+
+#area2 {
+	position: absolute;
+	top: 0;
+	right: 0;
+	width: 40%;
+	height: 100vh;
+	overflow: hidden;
+	/* background-color: brown; */
 }
 
 
