--- a/styles/indexStyle.css
+++ b/styles/indexStyle.css
@@ -43,7 +43,7 @@ h1{
 
 .animation-area {
 
-    background: linear-gradient(to left, #4E9231, #256F5B);
+    background: linear-gradient(to left, #748BA7, #236167);
 	width: 100%;
 	height: 100vh;
 }
@@ -56,7 +56,6 @@ h1{
 	width: 40%;
 	height: 100vh;
 	overflow: hidden;
-	/* background-color: brown; */
 }
 
 
@@ -67,7 +66,6 @@ h1{
 	width: 40%;
 	height: 100vh;
 	overflow: hidden;
-	/* background-color: brown; */
 }
 
 
