--- a/styles/indexStyle.css
+++ b/styles/indexStyle.css
@@ -43,7 +43,7 @@ h1{
 
 .animation-area {
 
-    background: linear-gradient(to left, #748BA7, #236167);
+    background: linear-gradient(to left, #748BA7, #7579ff);
 	width: 100%;
 	height: 100vh;
 }
